kube/_deploy/pod.yml
apiVersion: v1
kind: LimitRange
metadata:
  name: default-requests-and-limits
spec:
  limits:
  - default:
      memory: 512Mi
      cpu: 0.8
    defaultRequest:
      memory: 256Mi
      cpu: 0.4
    type: Container

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: c3w-nginx-helloworld
          servicePort: 80

#kind: Service
#apiVersion: v1
#metadata:
#  name: ingress-nginx
#  labels:
#    k8s-addon: ingress-nginx.addons.k8s.io
#  annotations:
#    service.beta.kubernetes.io/aws-load-balancer-proxy-protocol: '*'
#spec:
#  type: LoadBalancer
#  selector:
#    app: nginx-deployment
#  ports:
#  - name: http
#    port: 80
#    targetPort: http
#  backend:
#    serviceName: c3w-nginx-helloworld
#    servicePort: 80

---

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx-helloworld
        role: rolling-update
    spec:
      containers:
      - name: c3w-nginx-helloworld
        image: c3w/nginx-helloworld:0.1
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        readinessProbe:
          httpGet:
            path: /
            port: 80
---


#apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
#kind: Deployment
#metadata:
#  name: c3w-nginx-helloworld
#spec:
#  selector:
#    matchLabels:
#      app: nginx-helloworld
#  template:
#    metadata:
#      labels:
#       app: nginx-helloworld
#   spec:
#     containers:
#     - name: nginx-helloworld
#       image: c3w/nginx-helloworld:0.7
#       ports:
#       - containerPort: 80
#       readinessProbe:
#         httpGet:
#           path: /index.html
#           port: 80
